tests/Core/negative/test005.jvc
-- no matching case branch

case cons 1 2 of {
  nil -> true
}
